Fix footer width clobbering mobile layout #277
footer { width: 195px } was added globally in 2d17b58 without a media
query, overriding Dinky's mobile width: auto. With #contact a having
min-width: 44px, 6 icons (264px min) couldn't fit in 195px, wrapping
to a 4+2 grid on every mobile/tablet page.

Scoped width and padding-left to @media (width >= 1280px).

--- a/_sass/overrides/_rouge.scss
+++ b/_sass/overrides/_rouge.scss
@@ -351,8 +351,13 @@ article .entry-content {
 /* Footer styling */
 footer {
   color: var(--text-primary);
-  padding-left: 25px;
-  width: 195px;
+}
+
+@media (width >= 1280px) {
+  footer {
+    padding-left: 25px;
+    width: 195px;
+  }
 }
 
 footer h2 {
